# sqlalchemy

./: .env-example  Dockerfile  dao.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
api/: api_router_user.py  general_routers.py  schemas_user.py
migrations/: env.py
migrations/versions/: 2023_12_20_1809-040f6fc087bc_initial.py  2023_12_20_1840-0128af4aa59a_initial_second.py  2023_12_20_1849-48ac879d8fab_code_rework.py  2023_12_20_1854-152c37b604bb_code_rework_second.py  2023_12_25_1520-a1eeabc580c6_initial_third.py  2024_01_11_1101-c87c5120d22a_initial.py  2024_02_13_2334-13905bd39ccf_initial.py  2024_02_18_0222-7a38c17d8c2b_add_avatar_column.py  2024_02_22_2018-88bce353c0ea_fix_2.py  2024_03_04_2217-24bd1a1b5ec3_fix_3.py
static/: base.scss
templates/: add-product.html  all_comments.html  base.html  cart.html  index.html  order_sender.html  profile.html  registration.html  review.html  techsupport.html
web/: web_router.py
